Added created at and updated at in Task Details

--- a/todo_frontent/src/Components/Styles/TaskDetailsPopup.css
+++ b/todo_frontent/src/Components/Styles/TaskDetailsPopup.css
@@ -76,6 +76,11 @@
     resize: vertical;
     font-family: inherit;
   }
+
+  .description {
+    max-height: 100px;
+    overflow-y: auto;
+  }
   
 
   @media (max-width: 480px) {
